<resources>
    <string name="app_name">vinilos</string>
    <string name="title_artist">Artist</string>
    <!--<string name="title_dashboard">Options</string>-->
    <string name="title_albums">Albums</string>
    <string name="title_list_album">Lists Of Albums</string>
    <string name="album_name_placeholder" />
    <string name="album_description_placeholder"> </string>
    <string name="album_description">Botón para guardar el álbum actual</string>
    <!-- CREATE ALBUM-->
    <string name="albumFecha">Fecha de lanzamiento</string>
    <string name="nombreAlbum">Nombre</string>
    <string name="coverAlbum">Cover</string>
    <string name="genero1">Salsa</string>
    <string name="genero2">Rock</string>
    <string name="genero3">Folk</string>
    <string name="genero4">Classical</string>
    <string name="etiqueta1">Sony Music</string>
    <string name="etiqueta2">EMI</string>
    <string name="etiqueta3">Discos Fuentes</string>
    <string name="etiqueta4">Elektra</string>
    <string name="etiqueta5">Fania Records</string>
    <string name="seleccionGenero">Genero</string>
    <string name="seleccionEtiqueta">Etiqueta de grabacion</string>
    <string name="descripcionAlbum">Descripcion</string>
    <string name="album_description_image"> </string>
    <string name="DescripcionArtista">Descripción</string>
    <string name="TituloCrearAlbum">CREAR ALBUM</string>
    <string name="TituloCrearArtista">CREAR ARTISTA</string>
    <string name="nombreAlbumDetail">Nombre:</string>
    <string name="fechaLanzamientoAlbumDetail">Fecha de lanzamiento:</string>
    <string name="descripciónAlbumDetail">Descripción:</string>
    <string name="generoAlbumDetail">Genero:</string>
    <string name="recordLableAlbumDetail">Record label:</string>
    <!-- Listado de artistas-->
    <string name="crearArtista">Crear artista</string>
    <!--Crear Prize-->
    <string name="prizeOrganization">Organización</string>
    <string name="title_prize">Prizes</string>
    <string name="title_create_prize">Create Prizes</string>
    <!--String Genericos-->
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="descripcion">Descripcion</string>
    <string name="Organization">Organización</string>
    <string name="Birthday">Nacimiento</string>
    <string name="artista">Artista</string>
    <string name="title_list_artist">Lists of Artists</string>
    <string name="album_image">Album image</string>
    <string name="album_detail_image">Album detail image</string>
    <string name="create_prize_image">Create prize image</string>
    <string name="music_image">Music image</string>
    <!--String Agregar premio-->
    <string name="nombrePremiosDropList">Premios:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artistDetail">Detalle de Artista</string>
    <string name="albumDetail">Detalle de Album</string>
</resources>