<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SavePrizeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@mipmap/imageprize"
                    android:contentDescription="@string/create_prize_image"/>

            </LinearLayout>

            <EditText
                android:id="@+id/prizeName"
                style="@style/EditTextFieldStyle"
                android:hint="@string/nombreAlbum" />

            <EditText
                android:id="@+id/prizeDescription"
                style="@style/EditTextFieldStyle"
                android:hint="@string/descripcion" />

            <EditText
                android:id="@+id/prizeOrganization"
                style="@style/EditTextFieldStyle"
                android:hint="@string/prizeOrganization" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancelarCrearPrize"
                    style="@style/ButtonStyle"
                    android:text="@string/cancelar"
                    app:backgroundTint="@color/cancelar" />

                <Button
                    android:id="@+id/guardarCrearPrize"
                    style="@style/ButtonStyle"
                    android:text="@string/guardar"
                    app:backgroundTint="@color/guardar" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>