<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SaveAlbumFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#AAAAAA"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="CREAR ALBUM"
                    android:textAlignment="center"
                    android:textColor="#EDEDED"
                    android:textSize="34sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/nombreAlbum"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/nombreAlbum"
                        android:inputType="text"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/cover"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/coverAlbum"
                        android:inputType="text"
                        android:textSize="24sp"
                        android:textIsSelectable="true"
                        />

                    <Button
                        android:id="@+id/datePickerButton"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:text="Fecha de lanzamiento"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        style="?android:spinnerStyle"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        android:layout_marginTop="10dp"
                        android:onClick="showDatePickerDialog"/>

                    <Spinner
                        android:id="@+id/albumGeneros"
                        android:layout_width="fill_parent"
                        android:layout_height="58dp"
                        android:entries="@array/generos"
                        android:prompt="@string/seleccionGenero"
                        android:textSize="24sp" />

                    <Spinner
                        android:id="@+id/etiquetasGrabaciones"
                        android:layout_width="fill_parent"
                        android:layout_height="58dp"
                        android:entries="@array/etiquetasGrabacion"
                        android:prompt="@string/seleccionEtiqueta"
                        android:textSize="24sp" />




                    <EditText
                        android:id="@+id/descripcionAlbum"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/descripcionAlbum"
                        android:inputType="textMultiLine"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/cancelarCrearAlbum"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/cancelarAlbum"
                            app:backgroundTint="#E91E63" />

                        <Button
                            android:id="@+id/guardarCrearAlbum"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/guardarAlbum"
                            app:backgroundTint="#4CAF50" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>